--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               type="text"
               class="input-keyword form-control"
               placeholder="Look your film"
+              id="myValue"
             />
             <button
               class="btn btn-outline-primary search-button"
@@ -53,22 +54,7 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-md-3">Img</div>
-                <div class="col-md">
-                  <ul>
-                    <li>Title :<strong>judul</strong> (years)</li>
-                    <li>Actors :<strong>actor</strong></li>
-                    <li>Director :<strong>director</strong></li>
-                    <li>Language :<strong>language</strong></li>
-                    <li>Plot :</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="modal-body"></div>
           <div class="modal-footer">
             <button
               type="button"
